--- a/.github/workflows/Lede-x86-64.yml
+++ b/.github/workflows/Lede-x86-64.yml
@@ -18,9 +18,9 @@ on:
 #编辑任意指定文件触发开始编译
   push:
     branches:
-      - master
+      - main
     paths:
-      - 'diy.config'
+      - '.config'
 
 #release发布触发开始编译
 #  release:
