--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -50,7 +50,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
 
     - name: Load upstream commits
-      run: git pull https://github.com/coolsnowwolf/lede.git --no-log --no-commit
+      run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit
 
     - name: Apply commit changes
       run: |
