--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -51,7 +51,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
 
     - name: Load upstream commits
-      run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit
+      run: git pull https://github.com/coolsnowwolf/lede.git --log --no-commit --openwrt-ci.yml --no-commit
 
     - name: Apply commit changes
       run: |
@@ -66,5 +66,5 @@ jobs:
 
     - name: Push Commits
       env:
-        DOWNSTREAM_BRANCH: dev-19.07
+        DOWNSTREAM_BRANCH: master
       run: git push origin $DOWNSTREAM_BRANCH
