--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -39,9 +39,9 @@ jobs:
     steps:
 
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@master
       with:
-        ref: main
+        ref: master
         fetch-depth: 0
         lfs: true
 
